fixed some bugs

--- a/PhillipFashionProject/Info.plist
+++ b/PhillipFashionProject/Info.plist
@@ -36,6 +36,7 @@
 		<string>CaviarDreams.ttf</string>
 		<string>Caviar_Dreams_Bold.ttf</string>
 		<string>CaviarDreams_Italic.ttf</string>
+		<string>Century Gothic</string>
 	</array>
 	<key>FacebookDisplayName</key>
 	<string>Phillip Ou Fashion Project</string>
